// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderEllipsesCell component snapshot 1`] = `
<div
  className="text-truncate"
>
  some test text value
</div>
`;

exports[`HeaderFileExtensionCell component snapshot 1`] = `
<div
  className="text-truncate"
>
  PDF
</div>
`;

exports[`HeaderInfoPopoverCell component snapshot 1`] = `
<InfoPopover>
  <div
    className="help-popover-option"
    key="key"
  >
    <strong>
      KEY
    </strong>
    <br />
    value
  </div>
  <div
    className="help-popover-option"
    key="key2"
  >
    <strong>
      KEY2
    </strong>
    <br />
    value2
  </div>
</InfoPopover>
`;
